# editor

./: .gitattributes  Cargo.toml  README.md  run.sh  todo.txt
.github/workflows/: build.yml
android/: AndroidManifest.xml
bass-sys/: .ignore  Cargo.toml  build.rs
bass-sys/bass24/c/3dtest/: 3dtest.c
bass-sys/bass24/c/basstest/: makefile
bass-sys/bass24/c/modtest/: makefile
bass-sys/bass24/c/plugins/: makefile
bass-sys/bass24/vb/: bass.bas
bass-sys/linux/bass24/: makefile.in
bass-sys/linux/bass24/3dtest/: 3dtest.c
bass-sys/linux/bass24/modtest/: modtest.c
bass-sys/linux/bass24/rectest/: rectest.c
bass-sys/linux/bass24/speakers/: speakers.c
bass-sys/src/: constants.rs  lib.rs  macros.rs  types.rs
bass-sys/win/bass24/c/basstest/: basstest.vcxproj
bass-sys/win/bass24/c/modtest/: modtest.vcxproj
bass-sys/win/bass24/c/plugins/: plugins.vcxproj
bass-sys/win/bass24/vb/NetRadio/: frmNetRadio.frm
bass-sys/win/bass24/vb/Synth/: frmSynth.frm
beatmaps/happy-time/: Nanamori-chu  Goraku-bu - Happy Time wa Owaranai (Cut Ver.) (-Keitaro) [Insane].osu  Nanamori-chu  Goraku-bu - Happy Time wa Owaranai (Cut Ver.) (-Keitaro) [Keitarosu's Advanced].osu  Nanamori-chu  Goraku-bu - Happy Time wa Owaranai (Cut Ver.) (-Keitaro) [Normal].osu  Nanamori-chu  Goraku-bu - Happy Time wa Owaranai (Cut Ver.) (-Keitaro) [Osu's Expert].osu  Nanamori-chu  Goraku-bu - Happy Time wa Owaranai (Cut Ver.) (-Keitaro) [Osu's Hard].osu
framework/: Cargo.toml  configurations.txt
framework-example-2048/: Cargo.toml
framework-example-2048/src/: lib.rs  main.rs
framework/examples/: square.rs
framework/src/: game.rs  graphics.rs  lib.rs  window.rs
happy-time/: Nanamori-chu  Goraku-bu - Happy Time wa Owaranai (Cut Ver.) (-Keitaro) [Expert].osu  Nanamori-chu  Goraku-bu - Happy Time wa Owaranai (Cut Ver.) (-Keitaro) [Osu's Extra].osu
multibuild/: Cargo.toml
skin/: skin.ini
src/: audio.rs  beatmap.rs  game.rs  hit_object.rs  hitobject.rs  imgui_wrapper.rs  main.rs  math.rs  skin.rs  slider_render.rs  utils.rs
src/game/: background.rs  events.rs  grid.rs  hitobjects.rs  mod.rs  numbers.rs  seeker.rs  sliders.rs  timeline.rs  ui.rs
