[package]
name = "editor"
version = "0.1.0"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"

[profile.release]
debug = true

[workspace]
members = [
    "bass-sys",
    "framework",
]

[dependencies]
anyhow = "1.0.38"
bass-sys = { path = "bass-sys" }
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
log = "0.4.13"
stderrlog = "0.5.1"
num = "0.3.1"
ordered-float = "2.0.1"
structopt = "0.3.21"
image = "0.23.12"

[dependencies.libosu]
git = "https://github.com/iptq/libosu"
rev = "0229c52759ffb70322384e53abb0112cb52e49ae"

[features]
clippy = []
