[package]
name = "editor"
version = "0.1.0"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"

[profile.release]
debug = true

[workspace]
members = [
    "bass-sys",
    "framework",
    "framework-example-2048",
    "multibuild",
]

[dependencies]
anyhow = "1.0.38"
bass-sys = { path = "bass-sys" }
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
log = "0.4.13"
stderrlog = "0.5.1"
num = "0.3.1"
ordered-float = "2.0.1"
structopt = "0.3.21"
image = "0.23.12"
imgui = "0.6.1"
imgui-winit-support = "0.6.1"
framework = { path = "framework" }

[dependencies.libosu]
git = "https://github.com/iptq/libosu"
rev = "81677d5ed88936c4a3e64af951ff0ae523c2d403"

[features]
clippy = []

[package.metadata.android]
apk_label = "OSU editor"
target_sdk_version = 30
min_sdk_version = 26
fullscreen = true
