[package]
name = "editor"
version = "0.1.0"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"

[profile.release]
debug = true

[workspace]
members = [
    "bass-sys",
    "framework",
    "framework-example-2048",
    "multibuild",
]

[dependencies]
anyhow = "1.0.52"
bass-sys = { path = "bass-sys" }
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
log = "0.4.14"
stderrlog = "0.5.1"
num = "0.4.0"
ordered-float = "2.10.0"
structopt = "0.3.25"
image = "0.23.14"
imgui = "0.8.2"
imgui-winit-support = { version = "0.8.2", features = ["winit-26"], default-features = false }
framework = { path = "framework" }
imgui-gfx-renderer = "0.8.2"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"

[dependencies.libosu]
path = "../libosu"
version = "*"

[features]
clippy = []

[package.metadata.android]
apk_label = "OSU editor"
target_sdk_version = 30
min_sdk_version = 26
fullscreen = true
