[package]
name = "framework-example-2048"
version = "0.1.0"
authors = ["Michael Zhang <mail@mzhang.io>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.38"
framework = { path = "../framework" }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.2.1"

[package.metadata.android]
apk_label = "2048"
